Fix Bug 1598313 change checkbox colour for missing strings Three Changes Made to implement new colour for missing strings 1)Entity.css Added- .entity.missing .status:before with new colour ie #5F7285 2)ResourceProgress.css Changed-.progress-chart .menu .details div.missing border colour to #5F7285 3)style.css Added- .missing .status.fa:before with new colour ie #5F7285

--- a/frontend/src/modules/entitieslist/components/Entity.css
+++ b/frontend/src/modules/entitieslist/components/Entity.css
@@ -95,6 +95,11 @@
     color: #FED271;
 }
 
+.entity.missing .status:before {
+    color: #5F7285;
+}
+
+
 .entity.errors .status:before {
     color: #F36;
 }
