--- a/pontoon/base/static/css/style.css
+++ b/pontoon/base/static/css/style.css
@@ -21,6 +21,10 @@
   content: "";
 }
 
+.missing .status.fa:before {
+  color:#5F7285;
+}
+
 .translated .status.fa:before {
   color: #7BC876;
 }
